--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <title>Quiz: How Well Do You Know CF?</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 <body>
 
     <!-- Start Screen -->
     <div id="start-screen">
         <h1>How well do you know CF?</h1> <!-- Added title here -->
-
         <button onclick="startQuiz()">Start Quiz</button>
     </div>
 
     <!-- Question Container -->
     <div id="question-container" style="display: none;">
         <p id="question-text"></p>
+        <p id="extra-prompt" style="font-style: italic; color: #ff69b4;"></p> <!-- ADDED THIS LINE FOR EXTRA PROMPT -->
         <div id="options"></div>
     </div>
 
